--- a/.github/workflows/dependency.yml
+++ b/.github/workflows/dependency.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: log some info
         run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: run an update
+        run : npm update minimist
       - name: Dependabot metadata
         id: metadata
         uses: dependabot/fetch-metadata@v1.1.1
