--- a/.github/workflows/dependency.yml
+++ b/.github/workflows/dependency.yml
@@ -8,17 +8,12 @@ jobs:
   dependabot:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: log some info
         run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: run an update
         run : npm update minimist
-      - name: Dependabot metadata
-        id: metadata
-        uses: dependabot/fetch-metadata@v1.1.1
-        with:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
-      - name: Approve a PR
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: run my-precious
+        run : npx my-precious
+      - name: show changes
+        run : git status
