--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,3 +28,4 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
+        run: echo GITHUB_JOB
