--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,4 @@ jobs:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
              echo "$GITHUB_JOB"
+             echo "$GITHUB_ACTION"
