--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,5 +31,5 @@ jobs:
              echo "$GITHUB_JOB"
              echo "$GITHUB_ACTION"
       - name: vsfvfdvfd
-        run: echo "steps"
+        run: echo "$steps"
      
