--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,5 +32,5 @@ jobs:
              echo "$GITHUB_JOB"
              echo "$GITHUB_ACTION"
       - name: vsfvfdvfd
-        run: echo "$steps"
+        run: echo ${{steps}}
      
